<resources>
    <string name="app_name">Owlganizer</string>

    <string name="welcome_message">Welcome to the Owlganizer!
        \nPlease choose an option below:</string>

    <!-- **** Notification Channel Strings **** -->
    <string name="channel_name">Owlganizer Alarm</string>
    <string name="channel_description">Notification channel for Owlganizer</string>
    <!-- **** Form Labels **** -->
    <string name="title_label">Title</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="status_label">Status</string>
    <string name="mentor_label">Mentor</string>
    <string name="due_date_label">Due Date</string>
    <string name="term_course_list_label">Courses This Term</string>
    <string name="course_assessment_list_label">Course Assessments</string>
    <string name="assessment_type_label">Type</string>
    <string name="objective_assess_label">Objective</string>
    <string name="performance_assess_label">Performance</string>
    <string name="course_note_list_label">Course Notes</string>
    <string name="course_mentor_email">Mentor Email</string>
    <string name="course_mentor_name">Mentor Name</string>
    <string name="course_mentor_phone">Mentor Phone</string>
    <string name="note_body_label">Note:</string>
    <string name="set_alarm_label">Set Alarm</string>
    <string name="send_sms_label">Send Note SMS</string>
    <string name="sms_phone_number">Recipient Phone Number</string>
    <string name="progress_courses_label">Courses:</string>
    <string name="progress_assess_label">Assessments:</string>
    <string name="progress_course_planned">Planned/In Progress:</string>
    <string name="progress_course_complete">Completed:</string>
    <string name="progress_course_dropped">Dropped:</string>
    <!-- **** End Form Labels **** -->

    <!-- **** Button Text **** -->
    <string name="button_manage_terms">Manage Terms</string>
    <string name="button_track_progress">Track Progress</string>
    <string name="button_save">Save</string>
    <string name="button_close">Close</string>
    <string name="button_delete">Delete</string>
    <string name="button_send">Send</string>
    <!-- **** End Button Text **** -->

    <!-- **** Form Hints **** -->
    <string name="new_term_title_hint">Enter a title for your new term here</string>
    <string name="new_course_title_hint">Enter a title for your new course here</string>
    <string name="new_term_start_hint">When does your new term start?</string>
    <string name="new_course_start_hint">When does your new course start?</string>
    <string name="new_term_end_hint">When does your new term end?</string>
    <string name="new_course_end_hint">When does your new course end?</string>
    <string name="new_course_status_hint">Select a status for this course</string>
    <string name="new_course_mentor_hint">Select a Mentor for this course</string>
    <string name="new_assessment_title_hint">Select a title for this assessment</string>
    <string name="new_assessment_due_hint">Select a due date for this assessment</string>
    <string name="new_note_title_hint">Enter a title for your new note here</string>
    <string name="note_detail_title_hint">Enter a title for your note here</string>
    <string name="new_note_body_hint">Enter your note here</string>
    <string name="detail_term_title_hint">Selected Term Title</string>
    <string name="detail_course_title_hint">Selected Course Title</string>
    <string name="detail_term_start_hint">Selected Term Start Date</string>
    <string name="detail_course_start_hint">Selected Course Start Date</string>
    <string name="detail_term_end_hint">Selected Term End Date</string>
    <string name="detail_course_end_hint">Selected Course End Date</string>
    <string name="sms_recipient_hint">Recipient phone number here</string>
    <!-- **** End Form Hints **** -->


</resources>
