<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/assess_detail_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="#FBF9F9" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NewAssessmentActivity">

        <Button
            android:id="@+id/detail_assessment_save"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#19BB0C"
            android:text="@string/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assess_type_group" />

        <Button
            android:id="@+id/detail_assessment_delete"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="112dp"
            android:backgroundTint="#C70707"
            android:text="@string/button_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assess_type_group" />

        <EditText
            android:id="@+id/detail_assessment_title"
            android:layout_width="321dp"
            android:layout_height="45dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:hint="@string/new_assessment_title_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_assessment_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="88dp"
            android:text="@string/title_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/detail_assessment_due"
            android:layout_width="321dp"
            android:layout_height="47dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:hint="@string/new_assessment_due_hint"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_assessment_title" />

        <TextView
            android:id="@+id/detail_assessment_title_due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="56dp"
            android:text="@string/due_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_assessment_title_label" />

        <TextView
            android:id="@+id/assessment_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:text="@string/assessment_type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_assessment_title_due" />

        <RadioGroup
            android:id="@+id/assess_type_group"
            android:layout_width="269dp"
            android:layout_height="66dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_assessment_due">

            <RadioButton
                android:id="@+id/objective_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objective_assess_label" />

            <RadioButton
                android:id="@+id/performance_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/performance_assess_label" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
