<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/term_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="137dp"
        android:text="@string/end_date_label"
        app:layout_constraintBottom_toTopOf="@+id/new_term_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_start_label" />

    <TextView
        android:id="@+id/term_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="11dp"
        android:text="@string/start_date_label"
        app:layout_constraintEnd_toStartOf="@+id/new_term_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_title_label" />

    <TextView
        android:id="@+id/term_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="49dp"
        android:text="@string/title_label"
        app:layout_constraintBottom_toTopOf="@+id/term_start_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_term_title"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="23dp"
        android:inputType="textCapSentences"
        android:hint="@string/new_term_title_hint"
        app:layout_constraintBottom_toTopOf="@+id/new_term_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/term_title_label"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/new_term_start"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/new_term_start_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/term_start_label"
        app:layout_constraintTop_toBottomOf="@+id/new_term_title" />

    <EditText
        android:id="@+id/new_term_end"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/new_term_end_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/term_end_label"
        app:layout_constraintTop_toBottomOf="@+id/new_term_start" />

    <Button
        android:id="@+id/new_term_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="#19BB0C"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_term_end" />

</androidx.constraintlayout.widget.ConstraintLayout>