<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="137dp"
        android:text="@string/end_date_label"
        app:layout_constraintBottom_toTopOf="@+id/detail_term_save_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="11dp"
        android:text="@string/start_date_label"
        app:layout_constraintEnd_toStartOf="@+id/detail_term_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="49dp"
        android:text="@string/title_label"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/detail_term_title"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="23dp"
        android:inputType="textCapSentences"
        android:hint="@string/detail_term_title_hint"
        app:layout_constraintBottom_toTopOf="@+id/detail_term_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/detail_term_start"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/detail_term_start_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/detail_term_title" />

    <EditText
        android:id="@+id/detail_term_end"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/detail_term_end_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/detail_term_start" />
    <!-- This button will be a close button on initiation
    but transform to save if a field changes-->
    <Button
        android:id="@+id/detail_term_save_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="#19BB0C"
        android:text="@string/button_save"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_term_end" />
    <Button
        android:id="@+id/detail_term_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="#C70707"
        android:text="@string/button_delete"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_term_save_close" />

</androidx.constraintlayout.widget.ConstraintLayout>